2024-12-18  Morten Welinder  <terra@gnome.org>

	* src/colrow.c (colrow_set_visibility): Invalidate sheet's colrow
	position cache.  Fixes #712.

2024-04-29  b.s. <newbie-02 (at) gmx (dot) de>

	* src/numbers.h: add '~10_EXP' definitions,

2024-04-10  Morten Welinder  <terra@gnome.org>

	* src/gui-util.c (entry_to_float_with_format): With general
	format, use value_get_as_string to get shortest representation and
	don't truncate.

2024-04-03  Morten Welinder  <terra@gnome.org>

	* src/workbook.c (workbook_init): Fix double-gnm_float confusion.

2024-03-13  Morten Welinder  <terra@gnome.org>

	* src/cell.c (gnm_cell_get_text_for_editing): If the format family
	is unknown, render as general.

2024-02-11  Morten Welinder <terra@gnome.org>

	* configure.ac: Post-release bump.

2024-02-11  Morten Welinder <terra@gnome.org>

	* Release 1.12.57

2024-02-11  Morten Welinder  <terra@gnome.org>

	* src/sheet.c (sheet_range_set_expr_cb): Also redraw.  Fixes #755.

2023-12-05  Morten Welinder  <terra@gnome.org>

	* src/xml-sax-write.c (xml_write_filter_field): Fix reversed sense
	on several fields.

	* src/xml-sax-read.c (xml_sax_filter_condition): Fix badly broken
	reading of auto-filters.

	* src/sheet-filter.c (gnm_filter_condition_new_bucket): Cap n,
	so crazy numbers don't cause trouble down the line.
	(gnm_filter_combo_apply): Fix problem with empty range; fix
	gnm_float/double mixing.

2023-11-16  Morten Welinder  <terra@gnome.org>

	* src/wbc-gtk.c (wbcg_set_action_feedback): New function to
	suppress toggle action signalling while we're updating the ui.

2023-11-02  Morten Welinder <terra@gnome.org>

	* configure.ac: Post-release bump.

2023-11-02  Morten Welinder <terra@gnome.org>

	* Release 1.12.56

2023-09-24  Morten Welinder  <terra@gnome.org>

	* src/dependent.h (GnmDependentClass): Add q_array_context since
	certain graph deps are computed in array context.

	* src/dependent.c (dependent_link): Observe q_array_context.