@@ -1,3 +1,8 @@
+2025-01-17  Morten Welinder  <terra@gnome.org>
+
+	* src/cell-draw.c (cell_draw_simplify_attributes): Copy attributes
+	before filtering.  Fixes #707.
+
 2024-12-18  Morten Welinder  <terra@gnome.org>
 
 	* src/colrow.c (colrow_set_visibility): Invalidate sheet's colrow
